--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .pre-commit-config.yaml
 .DS_Store
 ._*
-taskflowadapter
+
+
+# Ignore everything in bookingextension subfolders
+taskflowadapter/*/
+
+# Do not ignore approval_trainer
+!taskflowadapter/standard/
+!taskflowadapter/standard/**  # Unignore contents too
